--- a/panoramic.conf
+++ b/panoramic.conf
@@ -5,6 +5,10 @@ type = feature collector
 developed_by = Alex Martinez <alex(dot)martinez(at)eurecat(dot)org>
 
 [running]
+# TEST or PRODUCTION. If TEST, the waiting time will be manually changed to a value > 0
+mode = PRODUCTION
+# waiting time (in minutes) between legs, below which the OSM query is not performed 
+minimum_waiting = 10
 scores = z_score
 
 [data]
