--- a/panoramic.conf
+++ b/panoramic.conf
@@ -9,7 +9,7 @@ developed_by = Alex Martinez <alex(dot)martinez(at)eurecat(dot)org>
 mode = PRODUCTION
 # waiting time (in minutes) between legs, below which the OSM query is not performed 
 minimum_waiting = 10
-scores = z_score
+scores = minmax_scores
 
 [data]
 all_europe = True
