--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Flask==1.1.2
+Flask~=2.0.2
 redis==3.5.3
 numpy==1.19.2
 requests==2.24.0
 geojson==2.5.0
 shapely==1.7.1
 overpass==0.7
+itsdangerous==2.0.1
 -e git+https://github.com/Ride2Rail/r2r-offer-utils.git#egg=r2r_offer_utils
